--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/js-cookie": "~3.0.3",
     "@types/react": "~18.0.37",
     "@types/react-dom": "~18.0.11",
+    "@types/react-input-mask": "^3.0.2",
     "@types/react-redux": "~7.1.25",
     "@types/react-router": "~5.1.20",
     "@types/react-router-dom": "~5.3.3",
@@ -58,6 +59,7 @@
     "jsdom": "^22.1.0",
     "prettier": "~2.8.8",
     "prop-types": "~15.8.1",
+    "react-input-mask": "^2.0.4",
     "storybook": "~7.0.25",
     "typescript": "~5.0.2",
     "vite": "~4.3.9",
